infrastructure/k8s/tickets-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets 
  template:
    metadata:
      labels:
        app: tickets 
    spec:
      containers:
        - name: tickets 
          image: peterstormio/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets 
  ports:
    - name: tickets 
      protocol: TCP
      port: 3000
      targetPort: 3000
